# codeleap-code-test

./: README.md  pyproject.toml
api/: admin.py  models.py  serializers.py  urls.py  viewsets.py
api/migrations/: 0001_initial.py
backend/: settings.py
